# uinput_test

./: CMakeLists.txt  makefile
src/: core.hpp  main.cpp  pch.hpp  virtual-device.cpp  virtual-device.hpp
